--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -1,2 +1,4 @@
 <p>tracker works!</p>
-<app-team-selector [teams]="teams"></app-team-selector>
+<app-team-selector [teams]="teams" (selected)="teamSelected($event)"></app-team-selector>
+<br/>
+<app-team-list [teams]="selectedTeams" [games]="games"></app-team-list>
