--- a/src/app/components/team-list/team-list.component.html
+++ b/src/app/components/team-list/team-list.component.html
@@ -1,1 +1,8 @@
-<app-team-list-item class="list-item" *ngFor="let team of teams; trackBy: trackById" [team]="team" [games]="games[team.id] | async"></app-team-list-item>
+<app-team-list-item
+  class="list-item"
+  *ngFor="let team of teams; trackBy: trackById"
+  [team]="team"
+  [games]="games[team.id] | async"
+  (remove)="remove.emit(team)"
+  (seeResults)="seeResults.emit(team)"
+></app-team-list-item>
