Last minute adjustments

--- a/src/app/components/team-list-item/team-list-item.component.html
+++ b/src/app/components/team-list-item/team-list-item.component.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <button
-    [attr.id]="'result' + team.abbreviation"
+    [attr.id]="'results' + team.abbreviation"
     [routerLink]="['results', team.id]"
   >
     See game results >
