--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -1,3 +1,10 @@
-<app-team-selector [teams]="teams" (selected)="teamSelected($event)"></app-team-selector>
-<br/>
-<app-team-list [teams]="selectedTeams" [games]="games" (remove)="removeTeam($event)"></app-team-list>
+<app-team-selector
+  [teams]="teams"
+  (selected)="teamSelected($event)"
+></app-team-selector>
+<br />
+<app-team-list
+  [teams]="selectedTeams"
+  [games]="games"
+  (remove)="removeTeam($event)"
+></app-team-list>
